# APICompass

./: .gitignore  README.md  RELEASE.md  compose.dev.yml  compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.prod.example  Dockerfile  README.md  SECURITY.md  alembic.ini  celerybeat-schedule  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_org_rls_policies.py  0003_create_rls_role.py  0003_local_connector_mode.py  0004_daily_usage_costs_ca.py  0005_alert_events.py  0006_org_entitlements.py  0007_local_connector_mode.py  20251211161924_nextauth_tables.py  20251212043612_two_factor_prep.py
backend/api_compass/: __init__.py  celery_app.py  main.py
backend/api_compass/api/: deps.py
backend/api_compass/core/: config.py  plans.py  telemetry.py
backend/api_compass/db/: __init__.py  base.py  session.py
backend/api_compass/models/: __init__.py  enums.py  mixins.py  tables.py
backend/api_compass/schemas/: __init__.py  budgets.py  connections.py  entitlements.py  ingest.py  metrics.py  usage.py
backend/api_compass/scripts/: bootstrap_plans.py
backend/api_compass/services/: alerts.py  audit.py  budgets.py  connections.py  data_ops.py  entitlements.py  jobs.py  local_agents.py  metrics.py  notifications.py  tips.py  usage.py
backend/api_compass/utils/: crypto.py
backend/tests/: conftest.py  test_alerts_service.py  test_budgets_api.py  test_connections_api.py  test_local_ingest.py  test_rls.py  test_usage_projection.py  test_usage_tips.py
(+40 files in other folders)
