[project]
name = "api-compass-backend"
version = "0.1.0"
description = "FastAPI backend for API Compass"
authors = [
  {name="Saurav", email="banerjiesaurav@gmail.com"}
  ]
maintainers = [
  {name = "Saurav", email = "banerjiesaurav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn[standard]>=0.30.6",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.34",
  "alembic>=1.13.2",
  "psycopg[binary,pool]>=3.2.1",
  "celery>=5.4.0",
  "redis>=5.1.1",
  "httpx>=0.27.2",
  "pendulum>=3.0.0",
  "python-jose[cryptography]>=3.3.0",
  "cryptography>=42.0.0",
  "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
  "mypy>=1.11.2",
  "types-redis>=4.6.0.20241004"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_compass"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
